--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>weboldalam</title>
 </head>
 <body>
-    
+    <h1>Miklósi-Ceznner Soma</h1>
+    <h3>Bemutatkozás</h3>
 </body>
 </html>
