link a cica köré

--- a/keplink.html
+++ b/keplink.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kép link feladat</title>
 </head>
 <body>
     <h2> Kép+ link feladat</h2>
     <br><!--szóköz-->
-    <img src="img/cica.jpg" alt="cica" title="cica">
-    
-
+    <a href="https://hu.wikipedia.org/wiki/Macska" target="_blank"><img src="img/cica.jpg" alt="cica" title="cica"></a>
 </body>
 </html>
