--- a/keplink.html
+++ b/keplink.html
@@ -9,5 +9,9 @@
     <h2> Kép+ link feladat</h2>
     <br><!--szóköz-->
     <a href="https://hu.wikipedia.org/wiki/Macska" target="_blank"><img src="img/cica.jpg" alt="cica" title="cica"></a>
+    <nav>
+        <a href="index.html">FŐOLDAL</a> |
+        <a href="keplink.html">KÉPLINK</a>
+    </nav>
 </body>
 </html>
