--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>weboldalam</title>
 </head>
 <body>
+    <nav>
+        <a href="index.html">FŐOLDAL</a> |
+        <a href="keplink.html">KÉPLINK</a>
+    </nav>
     <h1>Miklósi-Ceznner Soma</h1>
     <h3>Bemutatkozás</h3>
 </body>
