--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <a href="keplink.html">KÉPLINK</a>
     </nav>
     <h1>Miklósi-Ceznner Soma</h1>
-    <h3>Bemutatkozás</h3>
+
+    <p>Szirmáról járok be suliba, 14 éves vagyok. Van egy kutyám és sok halam. Szeretek motorozni apukammal és egyedül is. nagyon szeretek rollerezni volt osztálytársammal és játszani legjobb barátommak</p>
 </body>
 </html>
