--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </nav>
     <h1>Miklósi-Ceznner Soma</h1>
 
-    <p>Szirmáról járok be suliba, 14 éves vagyok. Van egy kutyám és sok halam. Szeretek motorozni apukammal és egyedül is. nagyon szeretek rollerezni volt osztálytársammal és játszani legjobb barátommak</p>
+    <p>Szirmáról járok be suliba, 14 éves vagyok. Van egy kutyám és sok halam. Szeretek motorozni apukammal és egyedül is.
+     nagyon szeretek rollerezni volt osztálytársammal és játszani legjobb barátommal</p>
 </body>
 </html>
