--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
 <body>
     <nav>
         <a href="index.html">FŐOLDAL</a> |
-        <a href="keplink.html">KÉPLINK</a>
+        <a href="keplink.html">KÉPLINK</a> |
+        <a href="listak.html">LISTÁK</a> |
     </nav>
+    
     <h1>Miklósi-Ceznner Soma</h1>
 
     <p>Szirmáról járok be suliba, 14 éves vagyok. Van egy kutyám és sok halam. Szeretek motorozni apukammal és egyedül is.
      nagyon szeretek rollerezni volt osztálytársammal és játszani legjobb barátommal</p>
+<h3>Kollázs képem</h3>
+<img src="névtelen terv.jpg">
 </body>
+
 </html>
