--- a/keplink.html
+++ b/keplink.html
@@ -8,8 +8,10 @@
 <body>
     <nav>
         <a href="index.html">FŐOLDAL</a> |
-        <a href="keplink.html">KÉPLINK</a>
+        <a href="keplink.html">KÉPLINK</a> |
+        <a href="listak.html">LISTÁK</a> |
     </nav>
+    
     <h2> Kép+ link feladat</h2>
     <br><!--szóköz-->
     <a href="https://hu.wikipedia.org/wiki/Macska" target="_blank"><img src="img/cica.jpg" alt="cica" title="cica"></a>
