--- a/keplink.html
+++ b/keplink.html
@@ -6,10 +6,11 @@
     <title>Kép link feladat</title>
 </head>
 <body>
-    <nav>
+ <nav>
         <a href="index.html">FŐOLDAL</a> |
         <a href="keplink.html">KÉPLINK</a> |
         <a href="listak.html">LISTÁK</a> |
+        <a href="Órarend.html">Órarend </a>|
     </nav>
     
     <h2> Kép+ link feladat</h2>
